:lipstick: Refs open-formulieren/open-forms#928 - Fix text alignment

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -21,6 +21,7 @@
 
     &--last-fieldset-component {
       @include margin($properties: padding-bottom);
+      vertical-align: top;
     }
   }
 
